1. Метод .of [#418080]