@@ -3,6 +3,7 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -10,9 +11,8 @@ import static org.junit.Assert.assertThat;
 public class ConvertList2ArrayTest {
     @Test
     public void when7ElementsThen9() {
-        ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+        int[][] result = new ConvertList2Array().toArray(
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
